apps/visitor-counter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-counter
spec:
  selector:
    app: visitor-counter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
