apps/visitor-counter/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitor-counter
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: counter.duytran.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visitor-counter
                port:
                  number: 80
